# git-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  railway.toml
compas-cultural/backend/: .dockerignore  .env.example  Dockerfile  _seed_completo.py  check_ml_tables.py  clean_fake_events.py  fix_null_fechafin.py  fix_search.py  get_meta_credentials.py  migration_add_missing_tables.sql  migration_resenas.sql  migration_rls_indexes.sql  migration_smart_listener.sql  pyproject.toml  railway.toml  requirements-prod.txt  requirements.txt  run_migration.py  schema.sql  scraper_run.txt  seed_colectivos_extra.py  seed_colectivos_v2.py  seed_filosofia.py  start.sh  supabase_schema.sql  update.py
compas-cultural/backend/app/: config.py  database.py  limiter.py  main.py  mock_data.py  scheduler.py
compas-cultural/backend/migrations/: 2026_04_fix_horas_y_scraping_inteligente.sql  2026_04_ml_features.sql  2026_04_ocr_media_pipeline.sql  2026_05_disable_event_hours.sql  2026_05_equipamientos_import_full.sql  2026_05_equipamientos_import_template.sql  2026_05_equipamientos_publicos_flag.sql  2026_05_equipamientos_zonas_ml.sql  2026_05_evento_complete_fields.sql  2026_05_moderacion_eventos.sql  2026_05_vistas_feed_algoritmico.sql  2026_06_admin_events_storage.sql
compas-cultural/backend/seeds/: __init__.py  check_agenda.py  check_coords.py  check_prod.py  debug_comfama.py  debug_matacandelas.py  debug_piloto.py  debug_tobon.py  debug_tobon2.py  diagnostico_bibliotecas.py  fix_compas_urls.py  fix_coords_key_spaces.py  fix_handles.py  get_piloto_id.py  inventario_bibliotecas.py  (+52 more)
(+200 files in other folders)
