[tool.poetry]
name = "compas-cultural-backend"
version = "0.1.0"
description = "Backend API para Cultura ETÉREA"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"
httpx = "^0.25.2"
anthropic = "^0.7.8"
openai = "^1.3.7"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
python-multipart = "^0.0.6"
slowapi = "^0.1.9"
python-dotenv = "^1.0.0"
supabase = "^2.3.0"
googlemaps = "^4.10.0"
apify-client = "^1.6.1"
apscheduler = "^3.10.4"
pgvector = "^0.2.4"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"